# SCU_PT1_SNAKE

./: CMakeLists.txt  README.md  coworkgame.cpp  coworkgame.h  difficultydialog.cpp  difficultydialog.h  difficultydialog.ui  entity.cpp  entity.h  game.cpp  game.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pregame.cpp  pregame.h  pvpgame.cpp  pvpgame.h  res.qrc  resource.rc  scoredialog.cpp  scoredialog.h  scoredialog.ui  singlegame.cpp  singlegame.h  snake.cpp  snake.h
